outputs/workspace_output_1771851342_1368.txt
error[E0425]: cannot find function `secure_random` in crate `rand`
   --> crypto/keys.rs:203:15
    |
203 |         rand::secure_random(&mut nonce_bytes)?;
    |               ^^^^^^^^^^^^^ not found in `rand`
    |
help: consider importing this function
    |
  6 + use crate::crypto::random::secure_random;
    |
help: if you import `secure_random`, refer to it directly
